--- a/admin/app/src/main/AndroidManifest.xml
+++ b/admin/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".fagmenttable"></activity>
+        <activity android:name=".fragmentfixture" />
+        <activity android:name=".fragmentconn" />
+        <activity android:name=".listview" />
+        <activity android:name=".toolbar" />
+        <activity android:name=".dashadm" />
+        <activity android:name=".admin_sig">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
