--- a/admin/app/src/main/AndroidManifest.xml
+++ b/admin/app/src/main/AndroidManifest.xml
@@ -11,17 +11,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".fagmenttable"></activity>
         <activity android:name=".fragmentfixture" />
-        <activity android:name=".fragmentconn" />
+        <activity android:name=".connectfrag" />
         <activity android:name=".listview" />
         <activity android:name=".toolbar" />
-        <activity android:name=".dashadm" />
-        <activity android:name=".admin_sig">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
